add token auth and get current user
