# api/types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package api
 
+import (
+	"time"
+)
+
 // AuthLoginRequest defines model for AuthLoginRequest.
 type AuthLoginRequest struct {
 	Email    string `json:"email"`
@@ -34,6 +38,15 @@ type AuthRegisterResponse struct {
 type Error struct {
 	Code    string `json:"code"`
 	Message string `json:"message"`
+}
+
+// User defines model for User.
+type User struct {
+	CreatedAt time.Time `json:"created_at"`
+	Email     string    `json:"email"`
+	Id        int64     `json:"id"`
+	Name      string    `json:"name"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
 
 // ValidationError defines model for ValidationError.
